--- a/personal.htm
+++ b/personal.htm
@@ -42,13 +42,14 @@ with the Center for Machine Vision and Signal Analysis, University of Oulu,
 Finland, where she has been a senior researcher since 2005 and an Associate 
 Professor since 2014. She received the Ph.D. degree in computer science from the 
 Chinese Academy of Sciences, Beijing, China, in 2005.&nbsp; <span lang="en-us">
-She got the Academy Postdoctoral position in 2007, and i</span>n 2011, she was 
-selected to the highly competitive Academy Research Fellow position. She has 
-authored or co-authored more than <span lang="en-us">23</span>0 papers in journals and conferences, and 
+She got the Academy Postdoctoral position in 2007, i</span>n 2011, she was 
+selected to the highly competitive Academy Research Fellow position, and in 
+2020, she was selected to one of the ten Academy Professors. She has 
+authored or co-authored more than <span lang="en-us">24</span>0 papers in journals and conferences, and 
 has served </font></span><font size="4">
 <span style="font-family: Times New Roman; font-weight: normal">as a reviewer for many journals and conferences. Her papers have 
-currently over 12500 citations in Google Scholar (h-index 
-52). She is Co-Program chair of ACM International Conference on Multimodal 
+currently over 14200 citations in Google Scholar (h-index 
+54). She is Co-Program chair of ACM International Conference on Multimodal 
 Interaction 2021 (ICMI), Special 
 Sessions/Panels Chairs for FG 2023, and general chair for ICBEA 2020. She was general chair for ICBEA 2019, Co-Chair for Late Breaking 
 Results of ICMI 2019, co-publicity c</span></font><span style="font-family: Times New Roman; font-weight: normal"><font size="4">hair 
@@ -138,9 +139,13 @@ been reported by Finnish TV programs, newspapers and MIT Technology Review.</spa
 	<div style="language:fi;margin-top:5.76pt;margin-bottom:0pt;margin-left:.38in;
 text-indent:-.38in;text-align:left;direction:ltr;unicode-bidi:embed;vertical-align:
 baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
+		<p style="margin-top: 24px; margin-bottom: 24px">
 		<font face="Times New Roman">
 		<u><b>Open positions</b></u>: Postdoctoral researchers, PhD students, Master thesis 
-		workers.</font><p>
+		workers.</font></p>
+		<p style="margin-top: 24px; margin-bottom: 24px"><u><b>
+		<font face="Times New Roman">NEWS:</font></b></u></p>
+		<p>
 		<font face="Times New Roman">
 		2020.10: Mr. Muzammil Behzad won the three minutes PhD thesis 
 		competition organized by ICIP2020:</font><span lang="EN-US" style="font-family: Times New Roman; color: #1F497D">
@@ -180,7 +185,7 @@ baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 		<font face="Times New Roman">
 		2020.05: Dr. Xin Liu has been selected to highly competitive Academy of 
 	Finland postdoctoral position 2020.09-2023.08.</font></p>
-	<p><b><u><font face="Times New Roman">
+	<p style="margin-top: 24px; margin-bottom: 24px"><b><u><font face="Times New Roman">
 	<span lang="en-us">Downloading: 
 	codes and databases:</span></font></u></b></p>
 	<p>
