--- a/personal.htm
+++ b/personal.htm
@@ -187,9 +187,9 @@ baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 	Finland postdoctoral position 2020.09-2023.08.</font></p>
 	<p style="margin-top: 24px; margin-bottom: 24px"><b><u><font face="Times New Roman">
 	<span lang="en-us">Downloading: 
-	codes and databases:</span></font></u></b></p>
+	code and databases:</span></font></u></b></p>
 	<p>
-	<span lang="en-us" style="font-family: Times New Roman; font-weight: 700">Codes:	</span>	</p>
+	<span lang="en-us" style="font-family: Times New Roman; font-weight: 700">Code:	</span>	</p>
 	<ul>
 	  <li class="style1">
 	    <p style="line-height: 150%; margin-bottom: 0">
