--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -328,8 +328,8 @@ for Human Behavior Understanding (FaceHUB)&quot;</span> with BMVC 2017; ''Face</
 'in-the-wild' Workshop-Challenge (Wild-Face)'' with CVPR 2017; </font> </span>
 <font size="4">''</font><font face="Times New Roman" size="4">Multi-view 
 lipreading challenge'' with ACCV 2016; Workshop on ''Spontaneous Facial Behavior 
-Analysis'' with ACCV 2016; Workshop on ''Robust Features for Computer Vision'' with CVPR 2016; Workshop on ¡°Context-Based Affect Recognition and Affective Face 
-¡°in-the-wild¡± with CVPR 2016; Workshop on ''Spontaneous Facial Behavior 
+Analysis'' with ACCV 2016; Workshop on ''Robust Features for Computer Vision'' with CVPR 2016; Workshop on Context-Based Affect Recognition and Affective Face 
+'in-the-wild' with CVPR 2016; Workshop on ''Spontaneous Facial Behavior 
 Analysis'', in connection with top tier conference ECCV 2014; Workshop on ''RoLoD: 
 Robust local descriptors for computer vision'' with ACCV 2014; Workshops on 
 Machine Learning for Vision-based Motion Analysis, in connection with top tier 
@@ -346,12 +346,12 @@ sessions: </font> </span></u></b></p>
 <span lang="EN-GB"><font size="4">Pietik&auml;inen</font></span><span lang="EN-US"><font size="4">) 
 Organization chair of special session ''Expression and Micro-Expression Analysis: 
 From Psychology to Computer Vision'' for IEEE International Conference on 
-Automatic Face and Gesture Recognition 2013 (FG¡¯13)</font></span></p>
+Automatic Face and Gesture Recognition 2013 (FG'13)</font></span></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <span lang="EN-US"><font size="4">(with Z. Zhou and S. Zafeiriou) 
 Organization chair of special session ''Analysis of mouth motion for speech 
 recognition and speaker verification'' for IEEE International Conference on 
-Automatic Face and Gesture Recognition 2015 (FG¡¯15)</font></span></p>
+Automatic Face and Gesture Recognition 2015 (FG'15)</font></span></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt; text-indent:-21.0pt">
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
