--- a/honors_awards.htm
+++ b/honors_awards.htm
@@ -239,7 +239,7 @@ for <b>521285S Affective Computing</b>, University of Oulu, since 2014</span></f
 <p class="MsoNormal" style="margin-left: 0pt; line-height:200%">
 <span style="font-family: Times New Roman">--
 FG 2018 tutorial: Guoying Zhao and Matti Pietik&auml;inen: READING HIDDEN EMOTIONS 
-FROM MICRO-EXPRESSION ANALYSIS. Xi¡¯an, China.</span></p>
+FROM MICRO-EXPRESSION ANALYSIS. Xi'an, China.</span></p>
 <p class="MsoNormal" style="margin-left: 0pt; line-height:200%">
 <span lang="EN-US"><font face="Times New Roman">-- </font></span>
 <span lang="en-US" style="font-family: Times New Roman">SCIA 2013 
@@ -254,18 +254,15 @@ tutorial: Matti Pietikainen and Guoying Zhao, <b>Local texture descriptors in
 computer vision</b>, 27<sup>th</sup>, 
 Sep. 2009, Kyoto, Japan.</span></font></p>
 <p class="MsoNormal" style="margin-left: 0pt; line-height:200%">
-<span lang="EN-US"><font face="Times New Roman">-- </font></span>
-<font face="Times New Roman"><span lang="EN-US">ICPR 2006 
+<span style="font-family: Times New Roman">-- ICPR 2006 
 Tutorials: Matti Pietikainen, Guoying Zhao &amp; Abdenour Hadid (University of Oulu, 
-Finland), <b>
-<a style="color: blue; text-decoration: underline; text-underline: single" href="http://www.comp.hkbu.edu.hk/~icpr06/tutorials/Pietikainen.html">
-<span style="color: windowtext; text-decoration: none">Local Binary Pattern 
-Approach to Computer Vision</span></a></b>. Aug. 20-24, 2006, Hongkong</span></font></p>
-<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt; margin-right: 0in; margin-top: 0in; margin-bottom: 5.0pt">
-<font face="Times New Roman">-- Completed 15-credit University Pedagogy studies 
-in 2019.</font></p>
-<p class="MsoNormal" style="margin-left: 0pt; line-height:200%">
-¡¡</p>
+Finland),
+<a style="font-family:Times New Roman" href="http://www.comp.hkbu.edu.hk/~icpr06/tutorials/Pietikainen.html">
+Local Binary Pattern 
+Approach to Computer Vision</a>. Aug. 20-24, 2006, Hongkong</span></p>
+<p style="line-height: 200%; margin-left: 0pt" class="MsoNormal">
+<span style="font-family: Times New Roman">-- Completed 15-credit University 
+Pedagogy studies in 2019.</span></p>
  <![if pub11]>
  <p class="MsoNormal" style="text-align: center; text-indent: 0pt; line-height: 200%; margin-top:24px; margin-bottom:24px">
 <span lang="en-US" style="font-size: 14.0pt; line-height: 200%; font-family: Times New Roman; font-weight: bold">
