--- a/publications.htm
+++ b/publications.htm
@@ -70,7 +70,7 @@ to the corresponding publishers.</b></font></p>
   <p class="MsoNormal"><b><font size="5">Theses<span lang="en-us"> and Books</span></font></b></li>
 </ul>
 <p class="MsoNormal" style="line-height: 150%; margin-top: 0.2cm; margin-bottom: 0.2cm; text-indent:6px">
-<font size="4">1. <b>Guoying Zhao</b>. <a href="Papers/Video-basedGaitRecognition.pdf">Video-based Gait Recognition</a>, Dissertation for the 
+<font size="4">1. <b>Guoying Zhao</b>. Video-based Gait Recognition. Dissertation for the 
 degree of&nbsp; Doctor of Philosophy, Institute of Computing Technology, Chinese 
 Academy of Sciences, June, 2005 (In Chinese)</font></p>
 <p class="MsoNormal" style="line-height: 150%; margin-top: 0.2cm; margin-bottom: 0.2cm; text-indent:6px">
@@ -165,79 +165,81 @@ NAS-FAS: Static-Dynamic Central Difference Network Search for Face Anti-Spoofing
 IEEE Transactions on Pattern Analysis and Machine Intelligence journal (TPAMI). 
 2021.</span></font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font size="4"><span style="font-family: 'Times New Roman',serif">&nbsp;237. Yante Li, 
-Xiaohua Huang, <b>Guoying Zhao</b>. <u>Joint Local and Global Information 
-Learning with Single Apex Frame Detection for Micro-expression Recognition</u>. 
-IEEE Trans. on Image Processing. 2021.</span></font></p>
-<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;236. </font>
-<span lang="EN-US" style="font-family: 'Times New Roman',serif"><font size="4">
-Haoyu Chen, Xin Liu, Jingang Shi, <b>Guoying Zhao</b>. <u>Temporal Hierarchical 
-Dictionary Guided Decoding for Online Gesture Segmentation and Recognition</u>. 
-IEEE Transactions on Image Processing (TIP), 2021. </font></span></p>
-<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">35</span>. Muhterem Dindar, Sanna J&auml;rvel&auml;, Sara 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">37</span>. Muhterem Dindar, Sanna J&auml;rvel&auml;, Sara 
 Ahola, Xiaohua Huang, <b>Guoying Zhao</b>. <u>Leaders and followers identified 
 by emotional mimicry during collaborative learning: A facial expression 
 recognition study on emotional valence</u>. IEEE Transactions on Affective 
-Computing, 2020. </font></p>
+Computing, 2021. </font></p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;234. </font></span>
-<font face="Times New Roman" size="4">Zhaoqiang Xia, Wei Peng, Huai-Qian Khor, 
-Xiaoyi Feng and <b>Guoying Zhao</b>. <u>Model and Data Shrinking for 
-Composite-database Micro-expression Recognition.</u> IEEE Trans. on Image 
-Processing. <span lang="en-us">2020.</span></font></p>
-<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;233. &nbsp;Mohammad Sabokrou, Mahmood Fathy, 
+<font face="Times New Roman" size="4">&nbsp;236. &nbsp;Mohammad Sabokrou, Mahmood Fathy, 
 <b>Guoying Zhao</b>, and Ehsan Adeli. <u>Deep End-to-End 
 One-Class Classifier</u>. IEEE Transactions on Neural Networks and Learning 
-Systems. 2020.</font></p>
+Systems. 2021.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;232. Wei Ke, Jie Chen, Jianbin Jiao, <b>
+<font face="Times New Roman" size="4">&nbsp;235. Wei Ke, Jie Chen, Jianbin Jiao, <b>
 Guoying Zhao</b>, and Qixiang Ye. <u>SRN: Side-output Residual Network for 
 Object Reflection Symmetry Detection and Beyond</u>. IEEE Transactions on Neural 
-Networks and Learning Systems. 2020. </font></p>
+Networks and Learning Systems. 2021. </font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;231. </font></span>
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;234. </font></span>
 <font face="Times New Roman" size="4">Xin Liu, <b>Guoying Zhao</b>. <u>3D 
 Skeletal Gesture Recognition via Discriminative Coding on Time-Warping Invariant 
-Riemannian Trajectories</u>. IEEE Trans. on Multimedia.<span lang="en-us"> 2020.</span>
+Riemannian Trajectories</u>. IEEE Trans. on Multimedia.<span lang="en-us"> 2021.</span>
 </font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;230. Wei Peng, Jingang Shi, <b>
+<font face="Times New Roman" size="4">&nbsp;233. Wei Peng, Jingang Shi, <b>
 Guoying Zhao</b>. <u>Spatial Temporal Graph Deconvolutional Network for 
 Skeleton-based Human Action Recognition</u>. IEEE Signal Processing Letters. 
 2020.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;229. Tong Zhang, Yuan Zong, Wenming Zheng, 
+<font face="Times New Roman" size="4">&nbsp;232. Tong Zhang, Yuan Zong, Wenming Zheng, 
 C. L. Philip Chen, Xiaopeng Hong, Chuangao Tang, Zhen Cui, <b>Guoying Zhao</b>. 
 <u>Cross-Database Micro-Expression Recognition: A Benchmark</u>. IEEE Transactions on 
-Knowledge and Data Engineering, 2020.</font></p>
+Knowledge and Data Engineering, 2021.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">
-<span lang="EN-US" style="line-height: 115%">&nbsp;</span><span style="line-height: 115%">228. Henglin, Wei Peng, Xin 
+<span lang="EN-US" style="line-height: 115%">&nbsp;</span><span style="line-height: 115%">231. Henglin, Wei Peng, Xin 
 Liu, Guoying Zhao. Graph Adversarial Learning for Noisy Skeleton-based 
 Action Recognition. Image Processing: Algorithms and Systems Conference, at 
 IS&amp;T Electronic Imaging 2021.</span></font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;2<span style="line-height: 115%">27. 
-Tuomas Varanka, Wei Peng, Guoying Zhao. Micro-Expression Recognition with Noisy 
+<font face="Times New Roman" size="4">&nbsp;230<span style="line-height: 115%">. Tuomas Varanka, Wei Peng, Guoying Zhao. Micro-Expression Recognition with Noisy 
 Labels. Human Vision and Electronic Imaging Conference, at IS&amp;T Electronic 
 Imaging 2021.</span></font></p>
 <p class="MsoNormal" style="margin-top:0.5cm; margin-bottom:0.5cm">
 <span lang="en-us"><font size="5"><b>2020</b></font></span></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">26</span>. Xin Liu, 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">29</span>. Xin Liu, 
 Henglin Shi, Xiaopeng Hong, Haoyu Chen, Dacheng Tao &amp; <b>Guoying Zhao</b>. 
 <u>3D 
 Skeletal Gesture Recognition via Hidden States Exploration</u>. IEEE Transactions on 
 Image Processing,</font><span style="font-family: Times New Roman; color: black"><font size="4"> 
 29: 4583-4597, </font></span><font face="Times New Roman" size="4">2020.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">25</span>. Xiaohua 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">28</span>. Xiaohua 
 Huang, Abhinav Dhall, Roland Goecke, Matti Pietik&auml;inen, <b>Guoying Zhao</b>. 
 <u>Analyzing group-level emotion with global alignment kernel based approach</u>. IEEE 
 Transactions on Affective Computing, 2020. </font></p>
+<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<span style="font-family: 'Times New Roman',serif">
+<font size="4">&nbsp;227. Yante Li, 
+Xiaohua Huang, <b>Guoying Zhao</b>. <u>Joint Local and Global Information 
+Learning with Single Apex Frame Detection for Micro-expression Recognition</u>. 
+IEEE Trans. on Image Proce</font></span><font size="4"><span style="font-family: 'Times New Roman',serif">ssing, 
+30: 249 - 263, 2020.</span></font></p>
+<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<font face="Times New Roman" size="4">&nbsp;226. </font>
+<font size="4">
+<span lang="EN-US" style="font-family: 'Times New Roman',serif">Haoyu Chen, Xin Liu, Jingang Shi, <b>Guoying Zhao</b>. <u>Temporal Hierarchical 
+Dictionary Guided Decoding for Online Gesture Segmentation and Recognition</u>. 
+IEEE Transactions on Image Processing (TI</span><span style="font-family: 'Times New Roman',serif">P), 
+29: 9689 - 9702, 2020. </span> </font></p>
+<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;225. </font></span>
+<font face="Times New Roman" size="4">Zhaoqiang Xia, Wei Peng, Huai-Qian Khor, 
+Xiaoyi Feng and <b>Guoying Zhao</b>. <u>Model and Data Shrinking for 
+Composite-database Micro-expression Recognition.</u> IEEE Trans. on Image 
+Processing, 29: 8590 - 8605, 2020.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <span style="font-family: 'Times New Roman'; " lang="en-us"><font size="4">&nbsp;224.
 </font>
