--- a/publications.htm
+++ b/publications.htm
@@ -67,7 +67,7 @@ to the corresponding publishers.</b></font></p>
 
 <ul>
   <li>
-  <p class="MsoNormal"><b><font size="5">Theses<span lang="en-us"> and Books</span></font></b></li>
+  <p class="MsoNormal"><b><font size="5">Theses and Books</font></b></li>
 </ul>
 <p class="MsoNormal" style="line-height: 150%; margin-top: 0.2cm; margin-bottom: 0.2cm; text-indent:6px">
 <font size="4">1. <b>Guoying Zhao</b>. Video-based Gait Recognition. Dissertation for the 
