--- a/Title.htm
+++ b/Title.htm
@@ -10,38 +10,44 @@
 
 <body>
 
-<table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="1549" id="AutoNumber2" height="34">
+<table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="1394" id="AutoNumber2" height="34">
   <tr>
     
-    <td width="180" height="34" align="center" bgcolor="#FFFFFF">
-    <p class="MsoNormal" style="text-autospace: none">
-    <font face="Times New Roman"><b>
-    <span lang="EN-US" style="font-family: TimesNewRomanPS-BoldMT; background-color:#C0C0C0">
-    <a href="personal.htm">PERSONAL</a></span></b></font></td>
+    <td width="148" height="34" align="center" bgcolor="#FFFFFF">
+    <p>
+    <b>
+    <a href="personal.htm">
+    <span style="font-family: Times New Roman; background-color:#C0C0C0">
+    <font color="#008000">PERSONAL</font></span></a></b></td>
     
-    <td width="170" height="34" align="center">
+    <td width="148" height="34" align="center">
 	<b>
-    <span lang="EN-US" style="font-family: Times New Roman; background-color:#C0C0C0">
-    <a href="education.htm">EDUCATION</a></span></b></td>
-    <td width="226" height="34" align="center">
+    <a href="education.htm">
+    <span style="font-family: Times New Roman; background-color:#C0C0C0">
+    <font color="#008000">EDUCATION</font></span></a></b></td>
+    <td width="216" height="34" align="center">
 	<b>
     <a href="main_experience.htm">
     <span style="font-family: Times New Roman; background-color:#C0C0C0">
-    MAIN EXPERIENCE</span></a></b></td>
-    <td width="325" height="34" align="center">
+    <font color="#008000">MAIN EXPERIENCE</font></span></a></b></td>
+    <td width="293" height="34" align="center">
     <b>
     <span style="font-family: Times New Roman; background-color:#C0C0C0">
-    <a href="professional_activities.htm">PROFESSIONAL&nbsp; ACTIVITIS</a></span></b></td>
-    <td width="185" height="34" align="center">
-	<b><font face="Times New Roman">
-	<a href="teammembers.htm"><span style="background-color: #C0C0C0">TEAM MEMBERS</span></a></font></b></td>
-    <td width="204" height="34" align="center">
-	<font face="Times New Roman">
-    <b><span lang="EN-US"><a href="publications.htm">
-	<span style="background-color: #C0C0C0">PUBLICATIONS</span></a></span></b></font></td>
-    <td width="259" height="34" bgcolor="#FFFFFF" align="center">
-	<b><font face="Times New Roman">
-    <a href="honors_awards.htm"><span style="background-color: #C0C0C0">TEACHING &amp; AWARDS</span></a></font></b></td>
+    <a href="professional_activities.htm"><font color="#008000">PROFESSIONAL&nbsp; ACTIVITIS</font></a></span></b></td>
+    <td width="170" height="34" align="center">
+	<b>
+	<a href="teammembers.htm">
+	<span style="background-color: #C0C0C0; font-family:Times New Roman">
+	<font color="#008000">TEAM MEMBERS</font></span></a></b></td>
+    <td width="172" height="34" align="center">
+    <b><a href="publications.htm">
+	<span style="background-color: #C0C0C0; font-family:Times New Roman">
+	<font color="#008000">PUBLICATIONS</font></span></a></b></td>
+    <td width="247" height="34" bgcolor="#FFFFFF" align="center">
+	<b>
+    <a href="honors_awards.htm">
+	<span style="background-color: #C0C0C0; font-family:Times New Roman">
+	<font color="#008000">TEACHING &amp; AWARDS</font></span></a></b></td>
   </tr>
 </table>
 
