--- a/Title.htm
+++ b/Title.htm
@@ -10,44 +10,45 @@
 
 <body>
 
-<table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="1394" id="AutoNumber2" height="34">
+<table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="1378" id="AutoNumber2" height="34">
   <tr>
     
-    <td width="148" height="34" align="center" bgcolor="#FFFFFF">
+    <td width="137" height="34" align="center" bgcolor="#FFFFFF">
     <p>
     <b>
     <a href="personal.htm">
-    <span style="font-family: Times New Roman; background-color:#C0C0C0">
-    <font color="#008000">PERSONAL</font></span></a></b></td>
+    <span style="font-family: Times New Roman; background-color:#CCCCCC">
+    <font color="#000000">PERSONAL</font></span></a></b></td>
     
-    <td width="148" height="34" align="center">
+    <td width="143" height="34" align="center">
 	<b>
     <a href="education.htm">
-    <span style="font-family: Times New Roman; background-color:#C0C0C0">
-    <font color="#008000">EDUCATION</font></span></a></b></td>
-    <td width="216" height="34" align="center">
+    <span style="font-family: Times New Roman; background-color:#CCCCCC">
+    <font color="#111111">EDUCATION</font></span></a></b></td>
+    <td width="219" height="34" align="center">
 	<b>
     <a href="main_experience.htm">
-    <span style="font-family: Times New Roman; background-color:#C0C0C0">
-    <font color="#008000">MAIN EXPERIENCE</font></span></a></b></td>
-    <td width="293" height="34" align="center">
+    <span style="font-family: Times New Roman; background-color:#CCCCCC">
+    <font color="#111111">MAIN EXPERIENCE</font></span></a></b></td>
+    <td width="282" height="34" align="center">
     <b>
-    <span style="font-family: Times New Roman; background-color:#C0C0C0">
-    <a href="professional_activities.htm"><font color="#008000">PROFESSIONAL&nbsp; ACTIVITIS</font></a></span></b></td>
-    <td width="170" height="34" align="center">
+    <a href="professional_activities.htm">
+    <span style="font-family: Times New Roman; background-color:#CCCCCC">
+    <font color="#111111">PROFESSIONAL&nbsp; ACTIVITIS</font></span></a></b></td>
+    <td width="182" height="34" align="center">
 	<b>
 	<a href="teammembers.htm">
-	<span style="background-color: #C0C0C0; font-family:Times New Roman">
-	<font color="#008000">TEAM MEMBERS</font></span></a></b></td>
-    <td width="172" height="34" align="center">
+	<span style="background-color: #CCCCCC; font-family:Times New Roman">
+	<font color="#111111">TEAM MEMBERS</font></span></a></b></td>
+    <td width="173" height="34" align="center">
     <b><a href="publications.htm">
-	<span style="background-color: #C0C0C0; font-family:Times New Roman">
-	<font color="#008000">PUBLICATIONS</font></span></a></b></td>
-    <td width="247" height="34" bgcolor="#FFFFFF" align="center">
+	<span style="background-color: #CCCCCC; font-family:Times New Roman">
+	<font color="#111111">PUBLICATIONS</font></span></a></b></td>
+    <td width="242" height="34" bgcolor="#FFFFFF" align="center">
 	<b>
     <a href="honors_awards.htm">
-	<span style="background-color: #C0C0C0; font-family:Times New Roman">
-	<font color="#008000">TEACHING &amp; AWARDS</font></span></a></b></td>
+	<span style="background-color: #CCCCCC; font-family:Times New Roman">
+	<font color="#111111">TEACHING &amp; AWARDS</font></span></a></b></td>
   </tr>
 </table>
 
