--- a/personal.htm
+++ b/personal.htm
@@ -73,65 +73,64 @@ and Jorma Ollila grant. </font> </span><font size="4">
 Senior Member. Her current research interests include image and video 
 descriptors, gait analysis, dynamic-texture recognition, facial-expression 
 recognition, human motion analysis, and person identification. Her research has 
-been reported by Finnish TV programs, newspapers and MIT Technology Review.</span></font></p>
+been reported by Finnish TV programs, newspapers and MIT Technology Review. </span></font></p>
 
 <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="100%" id="AutoNumber1">
   <tr>
     <td width="100%">
     <table border="0" width="100%" id="table1" height="325">
 		<tr>
-			<td width="115" height="39"><font face="Times New Roman"><b>Nationality:</b></font></td>
-			<td height="39" width="416"><font face="Times New Roman"><span lang="en-us">
+			<td width="273" height="39"><font face="Times New Roman"><b>Nationality:</b></font></td>
+			<td height="39" width="1385"><font face="Times New Roman"><span lang="en-us">
 			P.R.China</span></font></td>
 		</tr>
 		<tr>
-			<td width="115"height="52" valign=top><b><font face="Times New Roman"><span lang="EN-US">
+			<td width="273"height="52" valign=top><b><font face="Times New Roman"><span lang="EN-US">
     Address:</span></font></b></td>
-			<td height="52" valign=top width="416">
+			<td height="52" valign=top width="1385">
 			<p style="line-height: 150%"><font face="Times New Roman">
 			Center for Machine 
     Vision and Signal Analysis,<br>
 			P.O.Box 4500 FI-90014 University of Oulu, Finland.</font></td>
 		</tr>
 		<tr>
-			<td width="115"height="37"><font face="Times New Roman"><b>Office:</b></font></td>
-			<td height="37" width="416">
+			<td width="273"height="37"><font face="Times New Roman"><b>Office:</b></font></td>
+			<td height="37" width="1385">
     <p class="MsoNormal"><font face="Times New Roman">TS</font><span lang="en-us"><font face="Times New Roman">302</font></span></p>			</td>
 		</tr>
 		<tr>
-			<td width="115"height="35"><font face="Times New Roman"><b>Phone<span lang="en-us"> 
+			<td width="273"height="35"><font face="Times New Roman"><b>Phone<span lang="en-us"> 
 			Number</span>:</b> </font></td>
-			<td height="35" width="416"><font face="Times New Roman">+358 
+			<td height="35" width="1385"><font face="Times New Roman">+358 
 			</font><span lang="en-us"><font face="Times New Roman">294487564</font></span></td>
 		</tr>
 		<tr>
-			<td width="115" height="32"><b><font face="Times New Roman"> E_mail:</font></b></td>
-			<td height="32" width="416">
+			<td width="273" height="32"><b><font face="Times New Roman"> E_mail:</font></b></td>
+			<td height="32" width="1385">
     <p class="MsoNormal"><a href="mailto:firstname.lastname@ee.oulu.fi">
 	<span lang="en-us"><font face="Times New Roman">firstname.lastname(at)</font></span><font face="Times New Roman"><span lang="en-us">oulu.fi</span></font></a></p></td>
 		</tr>
 		<tr>
-			<td width="115"valign=top height="67"><b>
-    		<font face="Times New Roman"><a target="_blank" href="Research.htm">Research 
-			</a>Interest<span lang="en-us">s</span>: </font></b></td>
-			<td width="416"valign=top height="67">
-    <span lang="EN-US" style="font-family: Times New Roman">
-    Computer Vision, Pattern Recognition, Digital image &amp; video processing, 
-    Human motion analysis, Virtual Reality, Computer Graphics, Biometrics, 
-    Surveillance, etc.</span></td>
+			<td width="273" height="45"><b>
+    		<font face="Times New Roman">Research 
+			Interests:</font></b></td>
+			<td width="1385" height="45">
+    <font face="Times New Roman">Computer Vision, Pattern Recognition, Affective 
+	Computing, Digital image &amp; video processing, 
+    Human motion analysis, Virtual Reality, Biometrics, etc.</font></td>
 		</tr>
 		<tr>
-			<td width="115"><b><font face="Times New Roman">
+			<td width="273"><b><font face="Times New Roman">
 			<a target="_blank" href="http://scholar.google.fi/citations?user=hzywrFMAAAAJ">
 			Google Scholar</a></font></b></td>
-			<td width="416">
+			<td width="1385">
     <span style="font-family: Times New Roman">
 	<a target="_blank" href="http://scholar.google.fi/citations?user=hzywrFMAAAAJ">
 	http://scholar.google.fi/citations?user=hzywrFMAAAAJ</a></span></td>
 		</tr>
 		<tr>
-			<td width="115" height="5"></td>
-			<td height="5" width="416"></td>
+			<td width="273" height="5"></td>
+			<td height="5" width="1385"></td>
 		</tr>
 	  </table>
     <p><font face="Times New Roman">
