--- a/Pic.htm
+++ b/Pic.htm
@@ -25,15 +25,14 @@
     Vision <span lang="en-us">and Signal Analysis</span>, University of Oulu<span lang="en-us">, 
 	Finland</span>.</font></p>
 
+<p align="center">
+    <img border="0" src="Guoying3.jpg" width="338" height="199"></p>
+	<p align="center">
+    <font face="Times New Roman">Oulu, Finland</font></p>
+
     </td>
   </tr>
 </table>
-
-<p>
-    <img border="0" src="Guoying3.jpg" width="488" height="278"></p>
-<p>
-    &nbsp;&nbsp;&nbsp;&nbsp; <font face="Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-	Oulu, Finland</font></p>
 
 </body>
 
