--- a/education.htm
+++ b/education.htm
@@ -29,8 +29,8 @@ p
 <body>
 
 <p style="text-align: center; margin-bottom:0.5cm"><b>
-<span lang="EN-US" style="font-size: 14.0pt; font-family: Times New Roman">
-EDUCATION</span></b></p>
+<span lang="EN-US" style="font-family: Times New Roman">
+<font size="5">EDUCATION</font></span></b></p>
 <p class="MsoNormal" style="line-height: 200%; margin-top:0.5cm; margin-bottom:0.5cm"><b><span lang="EN-US">
 <font size="4">2002.9-2005.</font></span><font size="4">6</font><span lang="EN-US"><font size="4">, Key Laboratory of 
 Intelligent Information Processing, Institute of Computing Technology, Chinese 
