--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -155,8 +155,9 @@ a{font-family:arial,sans-serif}
 
 <body>
 
-<p align="center" style="line-height: 200%"><b><span style="font-size: 14.0pt; font-family: Times New Roman">PROFESSIONAL 
-ACTIVITIES</span></b></p>
+<p align="center" style="line-height: 200%"><b>
+<span style="font-family: Times New Roman"><font size="5">PROFESSIONAL 
+ACTIVITIES</font></span></b></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
 <font size="4">-- </font><u><b><font size="4" face="Times New Roman">2020-present, 
 IAPR Fellow</font></b></u></p>
