--- a/publications.htm
+++ b/publications.htm
@@ -58,8 +58,8 @@ h2
 
 <body>
 
-<p class="MsoNormal" style="text-align: center"><b><span lang="EN-US" style="font-size: 14.0pt">
-PUBLICATIONS</span></b></p>
+<p class="MsoNormal" style="text-align: center"><b><span lang="EN-US">
+<font size="5">PUBLICATIONS</font></span></b></p>
 <p class="MsoNormal" style="text-align: center; margin-top:1cm; margin-bottom:1cm">
 <font face="Times New Roman" size="4"><b>Note: Electronic papers shared on this website 
 are for fast dissemination of research work. The copyrights of the papers belong 
