--- a/teammembers.htm
+++ b/teammembers.htm
@@ -20,8 +20,8 @@ p
 <body>
 
 <p class="title" style="margin-bottom: 0.5cm; text-align:center">
-<span style="font-size: 20pt"><b>TEAM MEMBERS</b></span></p>
-<p class="title" style="margin-bottom: 0.5cm"><font size="5"><b>Current members:</b></font></p>
+<b><font size="5">TEAM MEMBERS</font></b></p>
+<p class="title" style="margin-bottom: 0.5cm"><font size="4"><b>Current members:</b></font></p>
 <table border="0" width="89%">
 	<tr>
 		<td width="272" height="0" align="left" valign="top">
