--- a/Title.htm
+++ b/Title.htm
@@ -10,45 +10,45 @@
 
 <body>
 
-<table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="1378" id="AutoNumber2" height="34">
+<table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="1536" id="AutoNumber2" height="34">
   <tr>
     
-    <td width="137" height="34" align="center" bgcolor="#FFFFFF">
+    <td width="135" height="34" align="center" bgcolor="#FFFFFF">
     <p>
     <b>
     <a href="personal.htm">
     <span style="font-family: Times New Roman; background-color:#CCCCCC">
-    <font color="#000000">PERSONAL</font></span></a></b></td>
+    <font color="#000000" size="4">PERSONAL</font></span></a></b></td>
     
-    <td width="143" height="34" align="center">
+    <td width="165" height="34" align="center">
 	<b>
     <a href="education.htm">
     <span style="font-family: Times New Roman; background-color:#CCCCCC">
-    <font color="#111111">EDUCATION</font></span></a></b></td>
-    <td width="219" height="34" align="center">
+    <font color="#111111" size="4">EDUCATION</font></span></a></b></td>
+    <td width="233" height="34" align="center">
 	<b>
     <a href="main_experience.htm">
     <span style="font-family: Times New Roman; background-color:#CCCCCC">
-    <font color="#111111">MAIN EXPERIENCE</font></span></a></b></td>
-    <td width="282" height="34" align="center">
+    <font color="#111111" size="4">MAIN EXPERIENCE</font></span></a></b></td>
+    <td width="329" height="34" align="center">
     <b>
     <a href="professional_activities.htm">
     <span style="font-family: Times New Roman; background-color:#CCCCCC">
-    <font color="#111111">PROFESSIONAL&nbsp; ACTIVITIS</font></span></a></b></td>
-    <td width="182" height="34" align="center">
+    <font color="#111111" size="4">PROFESSIONAL&nbsp; ACTIVITIS</font></span></a></b></td>
+    <td width="213" height="34" align="center">
 	<b>
 	<a href="teammembers.htm">
 	<span style="background-color: #CCCCCC; font-family:Times New Roman">
-	<font color="#111111">TEAM MEMBERS</font></span></a></b></td>
-    <td width="173" height="34" align="center">
+	<font color="#111111" size="4">TEAM MEMBERS</font></span></a></b></td>
+    <td width="186" height="34" align="center">
     <b><a href="publications.htm">
 	<span style="background-color: #CCCCCC; font-family:Times New Roman">
-	<font color="#111111">PUBLICATIONS</font></span></a></b></td>
-    <td width="242" height="34" bgcolor="#FFFFFF" align="center">
+	<font color="#111111" size="4">PUBLICATIONS</font></span></a></b></td>
+    <td width="276" height="34" bgcolor="#FFFFFF" align="center">
 	<b>
     <a href="honors_awards.htm">
 	<span style="background-color: #CCCCCC; font-family:Times New Roman">
-	<font color="#111111">TEACHING &amp; AWARDS</font></span></a></b></td>
+	<font color="#111111" size="4">TEACHING &amp; AWARDS</font></span></a></b></td>
   </tr>
 </table>
 
