--- a/teammembers.htm
+++ b/teammembers.htm
@@ -24,15 +24,15 @@ p
 <p class="title" style="margin-bottom: 0.5cm"><font size="4"><b>Current members:</b></font></p>
 <table border="0" width="89%">
 	<tr>
-		<td width="272" height="0" align="left" valign="top">
+		<td width="272" height="0" align="center" valign="top">
 		<font size="4" face="Times New Roman"><b>Senior researchers:</b></font></td>
-		<td width="288" height="0" align="left" valign="top">
+		<td width="288" height="0" align="center" valign="top">
 		<font face="Times New Roman" size="4"><b>Ph. D. <span lang="en-us">
 		candidates</span>:</b></font></td>
-		<td height="0" align="left" valign="top" width="259">
+		<td height="0" align="center" valign="top" width="259">
 		<font face="Times New Roman" size="4"><b>Master students<span lang="en-us"> 
 		and research assistants</span>:</b></font></td>
-		<td height="0" align="left" valign="top" width="453">
+		<td height="0" align="center" valign="top" width="453">
 		<font face="Times New Roman" size="4"><b>Visiting researchers</b></font></td>
 	</tr>
 	<tr>
