--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -271,8 +271,7 @@ Analysis ''in-the-wild'', 2016-2017</font></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <font size="4">(with S. Zafeiriou, I. Kotsia, M. Pietik&auml;inen, 
 J. Cohn and R. Chellappa) Special issue on </font>
-<a target="_blank" href="ECCV_workshop/Call_for_papers_SFBA_CVIU.pdf">
-<font face="Times New Roman" size="4">Spontaneous Facial Behaviour Analysis (SFBA)</font></a><span style="font-size: 12.0pt"><font size="4"> 
+<font face="Times New Roman" size="4">Spontaneous Facial Behaviour Analysis (SFBA)</font><span style="font-size: 12.0pt"><font size="4"> 
 for Computer Vision and Image Understanding, 2014-2015.</font></span></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <span lang="EN-US"><font size="4">(with J. Chen, Z. Lei, L. Liu, M. 
